# embeddedPython

./: .gitignore  Hough.py  README.md  camera_man.h  convert_image.py  convolution.py  detect_edges.py  edge_detection.ipynb  hough_transform.ipynb  image.h  image_generation.ipynb  image_union.h  in_file  out_file  out_file_blur  out_file_blur_edge  out_file_blur_edge_1Dconv  out_file_hough_img  out_file_hough_lines  out_file_threshold  read_img_from_file.ipynb
images/: HWBLURC  HWCBLUR  HWEDGEC  HWEDGEM  HW_EDGE  OUT_BLUR  OUT_HIMG  OUT_LINE  OUT_TH  SWBLURC  SWBLURM  SWCEDGE  SWEDGEC  SWEDGEM  camera_man.h  image.h  input  lena.csv  lena.h  lena.tif  mini_shapes.h  minishapes.csv  output  sudoku.csv
images/FinalBoardTest/: HOUGHM  OUTM  THRESHM
zybo/: CMakeLists.txt  CMakeSettings.json  Convolution.h  HoughTransformSW.h  IImageProcessing.h  ILoader.h  ImageMaths.h  ImageProcessingSW.h  LoaderFile.h  exporter.h  imageProcessingAlgorithms.cpp  imageProcessingAlgorithms.h  image_processed.csv  image_processed2.csv  image_union.h  main  main.cpp  types.h
